--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
         "@primevue/auto-import-resolver": "^4.5.4",
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-vue": "^6.0.3",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-vue": "^10.6.2",
+        "globals": "^16.5.0",
         "laravel-vite-plugin": "^2.0.0",
+        "prettier": "^3.7.4",
         "tailwindcss": "^4.0.0",
+        "typescript-eslint": "^8.50.1",
         "unplugin-vue-components": "^30.0.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
         "@primeuix/themes": "^2.0.2",
+        "primeicons": "^7.0.0",
         "primevue": "^4.5.4",
         "tailwindcss-primeui": "^0.6.1",
-        "vue": "^3.5.26"
+        "vue": "^3.5.26",
+        "vue-router": "^4.6.4"
     }
 }
