--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     },
     "dependencies": {
         "@primeuix/themes": "^2.0.2",
+        "@primevue/forms": "^4.5.4",
         "pinia": "^3.0.4",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.4",
         "swiper": "^12.0.3",
         "tailwindcss-primeui": "^0.6.1",
         "vue": "^3.5.26",
-        "vue-router": "^4.6.4"
+        "vue-router": "^4.6.4",
+        "zod": "^4.2.1"
     }
 }
