--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,8 @@
 {
    "extends": "./tsconfig.json",
    "compilerOptions": {
+      "target": "ESNext",
+      "module": "ESNext",
       "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
       "types": ["vite/client"],
 
@@ -17,7 +19,9 @@
       "noImplicitAny": false,
       "skipLibCheck": true,
       "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "isolatedModules": true,      /* Vite uchun tavsiya etiladi */
+      "useDefineForClassFields": true
    },
    "include": ["resources/ts/**/*.ts", "resources/ts/**/*.tsx", "resources/ts/**/*.vue", "resources/ts/**/*.d.ts"]
 }
