--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "globals": "^16.5.0",
       "laravel-vite-plugin": "^2.0.0",
       "prettier": "^3.7.4",
+      "sass": "^1.97.3",
       "sass-embedded": "^1.97.3",
       "tailwindcss": "^4.0.0",
       "typescript-eslint": "^8.50.1",
