--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "vite": "^7.0.7"
    },
    "dependencies": {
+      "@floating-ui/vue": "^1.1.10",
       "@headlessui/vue": "^1.7.23",
       "@primeuix/themes": "^2.0.3",
       "@primevue/forms": "^4.5.4",
