--- a/.env.example
+++ b/.env.example
@@ -42,5 +42,6 @@ CACHE_STORE=database
 
 
 VITE_APP_NAME="${APP_NAME}"
-
+VITE_TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_TOKEN=
 #ngrok http --domain=guided-select-newt.ngrok-free.app 8000
